force-app/main/default/objects/DeliveryPackageTrackingEvent__c/DeliveryPackageTrackingEvent__c.object-meta.xml
<CustomObject>
    <label>Delivery Package Tracking Event</label>
    <nameField>
        <label>Tracking Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Package Tracking Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>