force-app/main/default/objects/DeliveryPackageTrackingEvent__c/fields/File__c.field-meta.xml
<CustomField>
    <fullName>File__c</fullName>
    <label>File</label>
    <referenceTo>DeliveryPackageTrackingFile__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>TrackingEvents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>