force-app/main/default/objects/DeliveryPackageTrackingEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>DateTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>File__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>